--- a/css/fut-cards.less
+++ b/css/fut-cards.less
@@ -469,3 +469,492 @@
 		text-align: center;
 	}
 }
+
+.fut16 {
+	&.playercard {
+		background-repeat: no-repeat;
+		position: relative;
+		font-family: 'Open Sans', sans-serif;
+		font-weight: 400;
+		text-transform: uppercase;
+		color: #fff;
+		& div {
+			position: absolute; line-height: 18px;
+		}
+		&.card-small {
+			width: 135px;
+			height: 200px;
+			cursor: pointer;
+			background-position: 0px -1px;
+		}
+		&.card-large {
+			width: 202px;
+			height: 316px;
+			background-image: url('url(../assets/cards/fifa16/sprite-fut-16-regular-cards.png)');
+			background-position: 0 0;
+			&.motm,
+			&.pink,
+			&.charity,
+			&.green,
+			&.wcmotm,
+			&.intl-motm,
+			&.turquoise,
+			&.pro-player,
+			&.purple,
+			&.hero,
+			&.bluered,
+			&.blue-red,
+			&.blue,
+			&.toty,
+			&.blue-green,
+			&.tots.gold,
+			&.tots.silver,
+			&.tots.bronze {
+				background-image: url('../assets/cards/fifa16/sprite-fut-16-specialty-cards.png');
+			}
+			&.gold {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-rare-gold.png');
+			}
+			&.gold.normal {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-gold.png');
+			}
+			&.bronze {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-rare-bronze.png');
+			}
+			&.bronze.normal {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-bronze.png');
+			}
+			&.silver {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-rare-silver.png');
+			}
+			&.silver.normal {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-silver.png');
+			}
+			&.if.gold {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-if-gold.png'); color: #dcb20a;
+			}
+			&.if.silver {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-if-silver.png'); color: #d6dee0;
+			}
+			&.if.bronze {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-if-bronze.png'); color: #a48266;
+			}
+			&.motm {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-motm.png'); color: #fff;
+			}
+			&.pink,
+			&.charity {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-charity.png'); color: #fff;
+			}
+			&.legend {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-legend.png');
+				color: #B39428;
+				text-shadow: 1px 1px 1px rgba(193, 166, 69, 0.4) !important;
+			}
+			&.green,
+			&.wcmotm,
+			&.intl-motm {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-intl-motm.png');
+			}
+			&.turquoise,
+			&.pro-player {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-pro-player.png');
+			}
+			&.purple,
+			&.hero {
+				background-position: 0 -1622px;
+			}
+			&.bluered,
+			&.blue-red {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-blue-red.png');
+			}
+			&.blue,
+			&.toty {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-toty.png');
+			}
+			&.blue-green {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-blue-green.png');
+			}
+			&.tots.gold {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-tots-gold.png');
+			}
+			&.tots.silver {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-tots-silver.png');
+			}
+			&.tots.bronze {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-tots-bronze.png');
+			}
+			&.concept {
+				background-image: url('../assets/cards/fifa16/card-fut-15-large-concept.png');
+			}
+			
+			&.legend div,
+			&.card-small.playercard.legend div {
+				color: #B39428;
+				text-shadow: 1px 1px 1px rgba(193, 166, 69, 0.4);
+			}
+			&.legend .playercard-picture {
+				height: 115px;
+				width: 113px;
+				top: 45px;
+				left: 78px;
+			}
+			& .playercard-picture img {
+				max-width:100%;
+			}
+			&.legend .playercard-rating { top: 35px; }
+			&.legend .playercard-position { top: 50px; }
+			
+			& .playercard-rating { text-shadow: -1px 2px -1px #4f4f4f; top: 31px; left: 20px; font-size: 30px; line-height: 44px; }
+			& .playercard-name { top: 163px; left: 0; font-size: 20px; width: 200px; text-align: center; }
+			& .playercard-position { top: 68px; left: 16px; font-size: 18px; }
+			& .playercard-nation { top: 114px; left: 23px; }
+			& .playercard-nation img { width: 48px; }
+			& .playercard-picture { height: 115px; width: 115px; top: 42px; left: 75px; }
+			& .playercard-club { position: absolute; top: 82px; left: 26px; }
+			& .playercard-club img { width: 40px; height: 40px; }
+			& .playercard-attr1 { top: 190px; left: 26px; font-size: 18px; }
+			& .playercard-attr2 { top: 217px; left: 26px; font-size: 18px; }
+			& .playercard-attr3 { top: 243px; left: 26px; font-size: 18px; }
+			& .playercard-attr4 { top: 190px; left: 111px; font-size: 18px; }
+			& .playercard-attr5 { top: 217px; left: 111px; font-size: 18px; }
+			& .playercard-attr6 { top: 243px; left: 111px; font-size: 18px; }
+			& .playercard-mid-bar {
+				top: 263px;
+				left: 8px;
+				width: ~"calc(100% - 18px)";
+				height: 25px;
+				& > div {
+					position: relative;
+					display: inline-block;
+					width: 31%;
+					text-align: center;
+					& > .label {
+						font-size: 8px;
+						clear: both;
+						display: block;
+						line-height: 8px;
+						margin: 1px 0 0;
+					}
+				}
+			}
+		}
+		
+		&.card-small, &.card-mini {
+			.playercard-mid-bar > div > .label {
+				display: none;
+			}
+		}
+		
+		&.card-small.legend .playercard-picture { top: 33px; left: 53px; }
+		
+		&.card-small.playercard.gold {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-rare-gold.png');
+		}
+		&.card-small.playercard.gold.normal {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-gold.png');
+		}
+		&.card-small.playercard.bronze {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-rare-bronze.png');
+		}
+		&.card-small.playercard.bronze.normal {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-bronze.png');
+		}
+		&.card-small.playercard.silver {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-rare-silver.png');
+		}
+		&.card-small.playercard.silver.normal {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-silver.png');
+		}
+		&.card-small.playercard.bsg {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-bsg.png');}
+		&.card-small.playercard.if.gold {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-if-gold.png');
+			color: #dcb20a;
+		}
+		&.card-small.playercard.if.silver {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-if-silver.png');
+			color: #d6dee0;
+		}
+		&.card-small.playercard.if.bronze {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-if-bronze.png');
+			color: #a48266;
+		}
+		&.card-small.playercard.legend {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-legend.png');
+			color: #B39428;
+			text-shadow: 1px 1px 1px rgba(193, 166, 69, 0.4) !important;
+		}
+		&.card-small.playercard.gold:hover .hover,
+		&.card-small.playercard.silver:hover .hover,
+		&.card-small.playercard.bronze:hover .hover {
+			position: absolute;
+			width: 127px;
+			height: 100%;
+			background: url('../assets/cards/fifa16/card-fut-15-small-hover-rare.png') no-repeat;
+		}
+		&.card-small.playercard.blue,
+		&.card-small.playercard.toty {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-toty.png');
+		}
+		&.card-small.playercard.tots.gold {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-tots-gold.png');
+		}
+		&.card-small.playercard.tots.silver {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-tots-silver.png');
+		}
+		&.card-small.playercard.tots.bronze {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-tots-bronze.png');
+		}
+		&.card-small.playercard.green,
+		&.card-small.playercard.wcmotm,
+		&.card-small.playercard.intl-motm {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-intl-motm.png');
+		}
+		&.card-small.playercard.purple,
+		&.card-small.playercard.hero {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-hero.png');
+		}
+		&.card-small.playercard.motm {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-motm.png');
+		}
+		&.card-small.playercard.pro-player {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-pro-player.png');
+		}
+		&.card-small.playercard.bluered {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-bluered.png');
+		}
+		&.card-small.playercard.concept {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-concept.png');
+		}
+		&.card-small.playercard.blue-green {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-blue-green.png');
+		}
+		&.card-small.playercard.charity {
+			background-image: url('../assets/cards/fifa16/card-fut-15-small-charity.png');
+		}
+		
+		&.card-small .playercard-rating { top: 25px; left: 14px; font-size: 19px; line-height: 24px; }
+		&.card-small .playercard-name { top: 12px; left: 0; font-size: 13px; line-height: 14px; width: 100%; text-align: center;    overflow: hidden;
+		  text-overflow: ellipsis;
+		  white-space: nowrap;
+		  padding: 0 10px;
+		}
+		&.card-small .playercard-position { top: 29px; left: 45px; font-size: 11px; text-align: left;
+		}
+		&.card-small .playercard-chem { top: 108px; left: 58px; font-size: 12px; width: 65px; color: #fff; }
+		&.card-small .playercard-workrates { top: 108px; left: 26px; font-size: 12px; color: #fff; }
+		&.card-small .playercard-nation { top: 76px; left: 15px; padding-top: 7px; }
+		&.card-small .playercard-nation img { width: 32px; }
+		&.card-small .playercard-picture { top: 31px; left: 54px; }
+		&.card-small .playercard-picture img { width: 74px; height: 74px; }
+		&.card-small .playercard-club { top: 52px; left: 16px; }
+		&.card-small .playercard-club img { height: 29px; width: 29px; }
+		&.card-small .playercard-attr1 { top: 124px; left: 16px; font-size: 12px; }
+		&.card-small .playercard-attr2 { top: 142px; left: 16px; font-size: 12px; }
+		&.card-small .playercard-attr3 { top: 159px; left: 16px; font-size: 12px; }
+		&.card-small .playercard-attr4 { top: 124px; left: 71px; font-size: 12px; }
+		&.card-small .playercard-attr5 { top: 142px; left: 71px; font-size: 12px; }
+		&.card-small .playercard-attr6 { top: 159px; left: 71px; font-size: 12px; }
+		
+		
+		&.card-mini {
+			width:80px;
+			height:97px;
+			.playercard-mid-bar, .playercard-attr {
+				display: none;
+			}
+		}
+		&.card-mini .playercard-picture {
+			position:absolute;
+			right:5px;
+			top:24px;
+		}
+		&.card-mini .playercard-picture img {
+			height:48px;
+		}
+		&.card-mini .playercard-club {
+			position:absolute;
+			top:29px;
+			left:8px;
+		}
+		&.card-mini .playercard-club img {
+			height:22px;
+		}
+		&.card-mini .playercard-nation {
+			position:absolute;
+			top:49px;
+			left:8px;
+		}
+		&.card-mini .playercard-nation img {
+			height:13px;
+		}
+		&.card-mini .playercard-name {
+			font-size:10px;
+			position:absolute;
+			bottom:8px;
+			left:13px;
+			width:55px;
+			text-align:center;
+			white-space: nowrap;
+			overflow: hidden;
+		}
+		&.card-mini .playercard-rating {
+			/*font-family:'knulbold';*/
+			font-size:16px;
+			position:absolute;
+			top:7px;
+			left:8px;
+			text-align:center;
+		}
+		&.card-mini .playercard-position {
+			font-size:10px;
+			position:absolute;
+			top:7px;
+			left:33px;
+			text-align:center;
+		}
+		&.card-mini.gold {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-gold.png');
+			color:#000000;
+			text-shadow:-1px 1px 1px #CCCCCC;
+			background-size: 80px 97px;
+		}
+		&.card-mini.gold.rare {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-rare-gold.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.gold.if {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-if-gold.png');
+			color:#f0d075;
+			text-shadow:-1px 1px 1px #888888;
+			background-size: 80px 97px;
+		}
+		&.card-mini.silver {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-silver.png');
+			color:#000000;
+			text-shadow:-1px 1px 1px #CCCCCC;
+			background-size: 80px 97px;
+		}
+		&.card-mini.silver.rare {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-rare-silver.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.silver.if {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-if-silver.png');
+			color:#c2bdc3;
+			text-shadow:-1px 1px 1px #888888;
+			background-size: 80px 97px;
+		}
+		&.card-mini.bronze {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-bronze.png');
+			color:#000000;
+			text-shadow:-1px 1px 1px #CCCCCC;
+			background-size: 80px 97px;
+		}
+		&.card-mini.bronze.rare {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-rare-bronze.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.bronze.if {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-if-bronze.png');
+			color:#cca48a;
+			text-shadow:-1px 1px 1px #888888;
+			background-size: 80px 97px;
+		}
+		&.card-mini.toty {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-toty.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.bluered {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-blue-red.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.motm {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-motm.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.pro-player {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-pro-player.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.tots.bronze {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-tots-bronze.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.tots.silver {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-tots-silver.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.tots.gold {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-tots-gold.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.intl-motm {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-intl-motm.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.charity {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-charity.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.hero {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-hero.png');
+			color:#FFFFFF;
+			text-shadow:-1px 1px 1px #666666;
+			background-size: 80px 97px;
+		}
+		&.card-mini.legend {
+			background:url('../assets/cards/fifa16/card-fut-15-mini-legend.png');
+			color: #877418;
+			text-shadow: -1px 1px 1px #CCCCCC;
+			background-size: 80px 97px;
+		}
+		&.card-mini.playercard.concept {
+			background-image: url('../assets/cards/fifa16/card-fut-15-mini-concept.png');
+		}
+		&.card-mini.playercard.blue-green {
+			background-image: url('../assets/cards/fifa16/card-fut-15-mini-blue-green.png');
+		}
+		
+		/* Personal Additions */
+		&.card-small .playercard-mid-bar {
+			top: 106px;
+			left: 6px;
+			font-size: 12px;
+			width: ~"calc(100% - 12px)";
+			height: 18px;
+			text-transform: capitalize;
+		}
+		&.card-small .playercard-mid-bar > div {
+			position: relative;
+			display: inline-block;
+			width: 31%;
+			text-align: center;
+		}
+	}
+}
